# AI_Training_Running_Mix

./: .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml
ai_robot_mix_tools/: package-lock.json  package.json
ai_robot_mix_tools/src/: App.tsx
ai_robot_mix_tools/src/application/: login.js  login.ts
ai_robot_mix_tools/src/application/utils/remote/: serverConnect.js  serverConnect.ts
ai_robot_mix_tools/src/component/mcp/: mcpRegister.ts
ai_robot_mix_tools/src/index/start/: appStart.tsx  index.tsx
config/: testconfig.toml
cpp/: readme.md
cpp/include/: lib_import.hpp
cpp/source/: torch_build.cpp
py_scripts/: __init__.py
py_scripts/LLM_module/training/: moe_training.py  read_config.py  training.py
py_scripts/app/: webTools.py
result/ai_model/: expert_1_standalone.pth
result/ai_model/moe_stand_gpu_result/: DESKTOP-5QA2HK1_34004.1746630092912504100.pt.trace.json
serverAPI/: pom.xml
serverAPI/src/main/java/com/tourist/aiBack/: AiBackApplication.java
serverAPI/src/main/java/com/tourist/aiBack/AIModelController/: AIModelController.java
serverAPI/src/main/resources/: application.properties
serverAPI/src/test/java/com/tourist/aiBack/: AiBackApplicationTests.java
templates/: home.html  index.html  test.html
templates/aiAgent/: aiAgent.html
templates/aiTrain/: aiTrain.html
templates/data/: data.html
templates/robot/: robotSim.html
templates/settings/: settings.html
templates/user/: profile.html
test/: 1.py  scripts_test_01.py
(+1 files in other folders)
